// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel styles should not render without slides data 1`] = `null`;

exports[`Carousel styles should render with children as a function 1`] = `
@keyframes animation-0 {
  0% {
    width: 0%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  90% {
    width: 100%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  100% {
    width: 100%;
    -webkit-transform: translateX(100%);
    -ms-transform: translateX(100%);
    transform: translateX(100%);
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  90% {
    width: 100%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  100% {
    width: 100%;
    -webkit-transform: translateX(100%);
    -ms-transform: translateX(100%);
    transform: translateX(100%);
  }
}

.circuit-55 {
  width: 100%;
  height: auto;
  position: relative;
}

.circuit-33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
  position: relative;
  width: 100%;
  height: auto;
}

.circuit-9 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(0%,0,0);
  -ms-transform: translate3d(0%,0,0);
  transform: translate3d(0%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: 0;
}

.circuit-7 {
  box-shadow: 0 0 1px rgba(0,0,0,0.05);
  overflow: hidden;
  will-change: width;
}

.circuit-5 {
  width: 100%;
}

.circuit-3 {
  display: block;
  position: relative;
  overflow: hidden;
  height: auto;
  width: 100%;
  height: 0;
  width: 100%;
  padding-top: 56%;
  background: #FAFBFC;
}

.circuit-0 {
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  max-height: none;
  object-fit: cover;
  z-index: 2;
}

.circuit-0 img {
  object-fit: cover;
}

.circuit-20 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(-100%,0,0);
  -ms-transform: translate3d(-100%,0,0);
  transform: translate3d(-100%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: -1;
}

.circuit-31 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(-200%,0,0);
  -ms-transform: translate3d(-200%,0,0);
  transform: translate3d(-200%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: -2;
}

.circuit-53 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 16px;
}

.circuit-36 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 24px;
  font-weight: 700;
  margin-bottom: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 48px;
}

@media (min-width:480px) {
  .circuit-36 {
    font-size: 16px;
    line-height: 24px;
  }
}

@media (max-width:479px) {
  .circuit-36 {
    font-size: 13px;
    line-height: 20px;
  }
}

@media (max-width:479px) {
  .circuit-36 {
    margin-right: 12px;
  }
}

.circuit-41 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.circuit-38 {
  background-color: #F5F5F5;
  border-radius: 999999px;
  position: relative;
  width: 100%;
  overflow: hidden;
  height: 4px;
}

.circuit-38::after {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  background-color: #3063E9;
  -webkit-transition: width 0.05s ease-out;
  transition: width 0.05s ease-out;
  height: 100%;
  width: 1px;
}

.circuit-38::after {
  background-color: #000000;
}

.circuit-38::after {
  border-radius: 999999px;
  -webkit-animation-name: animation-0;
  animation-name: animation-0;
  -webkit-animation-duration: 5640ms;
  animation-duration: 5640ms;
  -webkit-animation-play-state: running;
  animation-play-state: running;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

.circuit-39 {
  font-size: 13px;
  line-height: 20px;
  margin-left: 8px;
}

.circuit-51 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: 48px;
}

@media (max-width:479px) {
  .circuit-51 {
    margin-left: 12px;
  }
}

.circuit-44 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  -webkit-transition: opacity 120ms ease-in-out, color 120ms ease-in-out, background-color 120ms ease-in-out, border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out, color 120ms ease-in-out, background-color 120ms ease-in-out, border-color 120ms ease-in-out;
  background-color: #FFF;
  border-color: #999999;
  color: #1A1A1A;
  padding: 8px calc(24px - 1px);
  border-radius: 8px;
  padding: 8px;
  margin-left: 8px;
}

.circuit-44:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-44:focus::-moz-focus-inner {
  border: 0;
}

.circuit-44:disabled,
.circuit-44[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-44:hover {
  background-color: #FAFBFC;
  border-color: #333333;
}

.circuit-44:active {
  background-color: #F5F5F5;
  border-color: #1A1A1A;
}

.circuit-44:first-of-type {
  margin-left: 0;
}

.circuit-42 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<div
  aria-label="gallery"
  class="circuit-55 circuit-56"
>
  <div
    class="circuit-33 circuit-34"
  >
    <div
      class="circuit-9 circuit-10"
      width="100%"
    >
      <div
        class="circuit-7 circuit-8"
      >
        <div
          class="circuit-5 circuit-6"
          width="100%"
        >
          <div
            class="circuit-2 circuit-3 circuit-4"
          >
            <img
              alt="Aerial photo of turbulent blue ocean waves"
              class="circuit-0 circuit-1"
              src="https://source.unsplash.com/QU-zhliIV8Q/1600x900"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="circuit-20 circuit-10"
      width="100%"
    >
      <div
        class="circuit-7 circuit-8"
      >
        <div
          class="circuit-5 circuit-6"
          width="100%"
        >
          <div
            class="circuit-2 circuit-3 circuit-4"
          >
            <img
              alt="Aerial photo of turbulent turquoise ocean waves"
              class="circuit-0 circuit-1"
              src="https://source.unsplash.com/TpHmEoVSmfQ/1600x900"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="circuit-31 circuit-10"
      width="100%"
    >
      <div
        class="circuit-7 circuit-8"
      >
        <div
          class="circuit-5 circuit-6"
          width="100%"
        >
          <div
            class="circuit-2 circuit-3 circuit-4"
          >
            <img
              alt="Aerial photo of turbulent ocean water with white foam"
              class="circuit-0 circuit-1"
              src="https://source.unsplash.com/-lpbnspYkJg/1600x900"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="circuit-53 circuit-54"
  >
    <p
      class="circuit-35 circuit-36 circuit-37"
    >
      1
       / 
      3
    </p>
    <div
      class="circuit-40 circuit-41"
    >
      <span
        aria-labelledby="progress-bar_6"
        class="circuit-38"
        loop=""
      />
      <span
        class="circuit-39"
        id="progress-bar_6"
      />
    </div>
    <div
      class="circuit-51 circuit-52"
    >
      <button
        aria-label="pause"
        class="circuit-43 circuit-44"
        title="Pause"
      >
        <svg
          fill="none"
          height="16"
          role="presentation"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.5 3v10M11.5 3v10"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
          />
        </svg>
        <span
          class="circuit-42"
        >
          Pause
        </span>
      </button>
      <button
        aria-label="previous"
        class="circuit-43 circuit-44"
        title="Previous"
      >
        <svg
          fill="none"
          height="16"
          role="presentation"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 4L6 8l4 4"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        <span
          class="circuit-42"
        >
          Previous
        </span>
      </button>
      <button
        aria-label="next"
        class="circuit-43 circuit-44"
        title="Next"
      >
        <svg
          fill="none"
          height="16"
          role="presentation"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 12l4-4-4-4"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        <span
          class="circuit-42"
        >
          Next
        </span>
      </button>
    </div>
  </div>
  <h1>
    Carousel heading for step #
    0
  </h1>
</div>
`;

exports[`Carousel styles should render with children as a node 1`] = `
@keyframes animation-0 {
  0% {
    width: 0%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  90% {
    width: 100%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  100% {
    width: 100%;
    -webkit-transform: translateX(100%);
    -ms-transform: translateX(100%);
    transform: translateX(100%);
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  90% {
    width: 100%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  100% {
    width: 100%;
    -webkit-transform: translateX(100%);
    -ms-transform: translateX(100%);
    transform: translateX(100%);
  }
}

.circuit-55 {
  width: 100%;
  height: auto;
  position: relative;
}

.circuit-33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
  position: relative;
  width: 100%;
  height: auto;
}

.circuit-9 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(0%,0,0);
  -ms-transform: translate3d(0%,0,0);
  transform: translate3d(0%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: 0;
}

.circuit-7 {
  box-shadow: 0 0 1px rgba(0,0,0,0.05);
  overflow: hidden;
  will-change: width;
}

.circuit-5 {
  width: 100%;
}

.circuit-3 {
  display: block;
  position: relative;
  overflow: hidden;
  height: auto;
  width: 100%;
  height: 0;
  width: 100%;
  padding-top: 56%;
  background: #FAFBFC;
}

.circuit-0 {
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  max-height: none;
  object-fit: cover;
  z-index: 2;
}

.circuit-0 img {
  object-fit: cover;
}

.circuit-20 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(-100%,0,0);
  -ms-transform: translate3d(-100%,0,0);
  transform: translate3d(-100%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: -1;
}

.circuit-31 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(-200%,0,0);
  -ms-transform: translate3d(-200%,0,0);
  transform: translate3d(-200%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: -2;
}

.circuit-53 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 16px;
}

.circuit-36 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 24px;
  font-weight: 700;
  margin-bottom: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 48px;
}

@media (min-width:480px) {
  .circuit-36 {
    font-size: 16px;
    line-height: 24px;
  }
}

@media (max-width:479px) {
  .circuit-36 {
    font-size: 13px;
    line-height: 20px;
  }
}

@media (max-width:479px) {
  .circuit-36 {
    margin-right: 12px;
  }
}

.circuit-41 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.circuit-38 {
  background-color: #F5F5F5;
  border-radius: 999999px;
  position: relative;
  width: 100%;
  overflow: hidden;
  height: 4px;
}

.circuit-38::after {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  background-color: #3063E9;
  -webkit-transition: width 0.05s ease-out;
  transition: width 0.05s ease-out;
  height: 100%;
  width: 1px;
}

.circuit-38::after {
  background-color: #000000;
}

.circuit-38::after {
  border-radius: 999999px;
  -webkit-animation-name: animation-0;
  animation-name: animation-0;
  -webkit-animation-duration: 5640ms;
  animation-duration: 5640ms;
  -webkit-animation-play-state: running;
  animation-play-state: running;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

.circuit-39 {
  font-size: 13px;
  line-height: 20px;
  margin-left: 8px;
}

.circuit-51 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: 48px;
}

@media (max-width:479px) {
  .circuit-51 {
    margin-left: 12px;
  }
}

.circuit-44 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  -webkit-transition: opacity 120ms ease-in-out, color 120ms ease-in-out, background-color 120ms ease-in-out, border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out, color 120ms ease-in-out, background-color 120ms ease-in-out, border-color 120ms ease-in-out;
  background-color: #FFF;
  border-color: #999999;
  color: #1A1A1A;
  padding: 8px calc(24px - 1px);
  border-radius: 8px;
  padding: 8px;
  margin-left: 8px;
}

.circuit-44:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-44:focus::-moz-focus-inner {
  border: 0;
}

.circuit-44:disabled,
.circuit-44[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-44:hover {
  background-color: #FAFBFC;
  border-color: #333333;
}

.circuit-44:active {
  background-color: #F5F5F5;
  border-color: #1A1A1A;
}

.circuit-44:first-of-type {
  margin-left: 0;
}

.circuit-42 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<div
  aria-label="gallery"
  class="circuit-55 circuit-56"
>
  <div
    class="circuit-33 circuit-34"
  >
    <div
      class="circuit-9 circuit-10"
      width="100%"
    >
      <div
        class="circuit-7 circuit-8"
      >
        <div
          class="circuit-5 circuit-6"
          width="100%"
        >
          <div
            class="circuit-2 circuit-3 circuit-4"
          >
            <img
              alt="Aerial photo of turbulent blue ocean waves"
              class="circuit-0 circuit-1"
              src="https://source.unsplash.com/QU-zhliIV8Q/1600x900"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="circuit-20 circuit-10"
      width="100%"
    >
      <div
        class="circuit-7 circuit-8"
      >
        <div
          class="circuit-5 circuit-6"
          width="100%"
        >
          <div
            class="circuit-2 circuit-3 circuit-4"
          >
            <img
              alt="Aerial photo of turbulent turquoise ocean waves"
              class="circuit-0 circuit-1"
              src="https://source.unsplash.com/TpHmEoVSmfQ/1600x900"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="circuit-31 circuit-10"
      width="100%"
    >
      <div
        class="circuit-7 circuit-8"
      >
        <div
          class="circuit-5 circuit-6"
          width="100%"
        >
          <div
            class="circuit-2 circuit-3 circuit-4"
          >
            <img
              alt="Aerial photo of turbulent ocean water with white foam"
              class="circuit-0 circuit-1"
              src="https://source.unsplash.com/-lpbnspYkJg/1600x900"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="circuit-53 circuit-54"
  >
    <p
      class="circuit-35 circuit-36 circuit-37"
    >
      1
       / 
      3
    </p>
    <div
      class="circuit-40 circuit-41"
    >
      <span
        aria-labelledby="progress-bar_8"
        class="circuit-38"
        loop=""
      />
      <span
        class="circuit-39"
        id="progress-bar_8"
      />
    </div>
    <div
      class="circuit-51 circuit-52"
    >
      <button
        aria-label="pause"
        class="circuit-43 circuit-44"
        title="Pause"
      >
        <svg
          fill="none"
          height="16"
          role="presentation"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.5 3v10M11.5 3v10"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
          />
        </svg>
        <span
          class="circuit-42"
        >
          Pause
        </span>
      </button>
      <button
        aria-label="previous"
        class="circuit-43 circuit-44"
        title="Previous"
      >
        <svg
          fill="none"
          height="16"
          role="presentation"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 4L6 8l4 4"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        <span
          class="circuit-42"
        >
          Previous
        </span>
      </button>
      <button
        aria-label="next"
        class="circuit-43 circuit-44"
        title="Next"
      >
        <svg
          fill="none"
          height="16"
          role="presentation"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 12l4-4-4-4"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        <span
          class="circuit-42"
        >
          Next
        </span>
      </button>
    </div>
  </div>
  <h1>
    Carousel heading
  </h1>
</div>
`;

exports[`Carousel styles should render with default paused styles 1`] = `
@keyframes animation-0 {
  0% {
    width: 0%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  90% {
    width: 100%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  100% {
    width: 100%;
    -webkit-transform: translateX(100%);
    -ms-transform: translateX(100%);
    transform: translateX(100%);
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  90% {
    width: 100%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  100% {
    width: 100%;
    -webkit-transform: translateX(100%);
    -ms-transform: translateX(100%);
    transform: translateX(100%);
  }
}

.circuit-55 {
  width: 100%;
  height: auto;
  position: relative;
}

.circuit-33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
  position: relative;
  width: 100%;
  height: auto;
}

.circuit-9 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(0%,0,0);
  -ms-transform: translate3d(0%,0,0);
  transform: translate3d(0%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: 0;
}

.circuit-7 {
  box-shadow: 0 0 1px rgba(0,0,0,0.05);
  overflow: hidden;
  will-change: width;
}

.circuit-5 {
  width: 100%;
}

.circuit-3 {
  display: block;
  position: relative;
  overflow: hidden;
  height: auto;
  width: 100%;
  height: 0;
  width: 100%;
  padding-top: 56%;
  background: #FAFBFC;
}

.circuit-0 {
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  max-height: none;
  object-fit: cover;
  z-index: 2;
}

.circuit-0 img {
  object-fit: cover;
}

.circuit-20 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(-100%,0,0);
  -ms-transform: translate3d(-100%,0,0);
  transform: translate3d(-100%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: -1;
}

.circuit-31 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(-200%,0,0);
  -ms-transform: translate3d(-200%,0,0);
  transform: translate3d(-200%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: -2;
}

.circuit-53 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 16px;
}

.circuit-36 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 24px;
  font-weight: 700;
  margin-bottom: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 48px;
}

@media (min-width:480px) {
  .circuit-36 {
    font-size: 16px;
    line-height: 24px;
  }
}

@media (max-width:479px) {
  .circuit-36 {
    font-size: 13px;
    line-height: 20px;
  }
}

@media (max-width:479px) {
  .circuit-36 {
    margin-right: 12px;
  }
}

.circuit-41 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.circuit-39 {
  font-size: 13px;
  line-height: 20px;
  margin-left: 8px;
}

.circuit-51 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: 48px;
}

@media (max-width:479px) {
  .circuit-51 {
    margin-left: 12px;
  }
}

.circuit-44 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  -webkit-transition: opacity 120ms ease-in-out, color 120ms ease-in-out, background-color 120ms ease-in-out, border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out, color 120ms ease-in-out, background-color 120ms ease-in-out, border-color 120ms ease-in-out;
  background-color: #FFF;
  border-color: #999999;
  color: #1A1A1A;
  padding: 8px calc(24px - 1px);
  border-radius: 8px;
  padding: 8px;
  margin-left: 8px;
}

.circuit-44:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-44:focus::-moz-focus-inner {
  border: 0;
}

.circuit-44:disabled,
.circuit-44[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-44:hover {
  background-color: #FAFBFC;
  border-color: #333333;
}

.circuit-44:active {
  background-color: #F5F5F5;
  border-color: #1A1A1A;
}

.circuit-44:first-of-type {
  margin-left: 0;
}

.circuit-42 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-38 {
  background-color: #F5F5F5;
  border-radius: 999999px;
  position: relative;
  width: 100%;
  overflow: hidden;
  height: 4px;
}

.circuit-38::after {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  background-color: #3063E9;
  -webkit-transition: width 0.05s ease-out;
  transition: width 0.05s ease-out;
  height: 100%;
  width: 1px;
}

.circuit-38::after {
  background-color: #000000;
}

.circuit-38::after {
  border-radius: 999999px;
  -webkit-animation-name: animation-0;
  animation-name: animation-0;
  -webkit-animation-duration: 5640ms;
  animation-duration: 5640ms;
  -webkit-animation-play-state: paused;
  animation-play-state: paused;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

<div
  aria-label="gallery"
  class="circuit-55 circuit-56"
>
  <div
    class="circuit-33 circuit-34"
  >
    <div
      class="circuit-9 circuit-10"
      width="100%"
    >
      <div
        class="circuit-7 circuit-8"
      >
        <div
          class="circuit-5 circuit-6"
          width="100%"
        >
          <div
            class="circuit-2 circuit-3 circuit-4"
          >
            <img
              alt="Aerial photo of turbulent blue ocean waves"
              class="circuit-0 circuit-1"
              src="https://source.unsplash.com/QU-zhliIV8Q/1600x900"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="circuit-20 circuit-10"
      width="100%"
    >
      <div
        class="circuit-7 circuit-8"
      >
        <div
          class="circuit-5 circuit-6"
          width="100%"
        >
          <div
            class="circuit-2 circuit-3 circuit-4"
          >
            <img
              alt="Aerial photo of turbulent turquoise ocean waves"
              class="circuit-0 circuit-1"
              src="https://source.unsplash.com/TpHmEoVSmfQ/1600x900"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="circuit-31 circuit-10"
      width="100%"
    >
      <div
        class="circuit-7 circuit-8"
      >
        <div
          class="circuit-5 circuit-6"
          width="100%"
        >
          <div
            class="circuit-2 circuit-3 circuit-4"
          >
            <img
              alt="Aerial photo of turbulent ocean water with white foam"
              class="circuit-0 circuit-1"
              src="https://source.unsplash.com/-lpbnspYkJg/1600x900"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="circuit-53 circuit-54"
  >
    <p
      class="circuit-35 circuit-36 circuit-37"
    >
      1
       / 
      3
    </p>
    <div
      class="circuit-40 circuit-41"
    >
      <span
        aria-labelledby="progress-bar_4"
        class="circuit-38"
        loop=""
      />
      <span
        class="circuit-39"
        id="progress-bar_4"
      />
    </div>
    <div
      class="circuit-51 circuit-52"
    >
      <button
        aria-label="play"
        class="circuit-43 circuit-44"
        title="Play"
      >
        <svg
          fill="none"
          height="16"
          role="presentation"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13 8l-9 5V3l9 5z"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        <span
          class="circuit-42"
        >
          Play
        </span>
      </button>
      <button
        aria-label="previous"
        class="circuit-43 circuit-44"
        title="Previous"
      >
        <svg
          fill="none"
          height="16"
          role="presentation"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 4L6 8l4 4"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        <span
          class="circuit-42"
        >
          Previous
        </span>
      </button>
      <button
        aria-label="next"
        class="circuit-43 circuit-44"
        title="Next"
      >
        <svg
          fill="none"
          height="16"
          role="presentation"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 12l4-4-4-4"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        <span
          class="circuit-42"
        >
          Next
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Carousel styles should render with default styles 1`] = `
@keyframes animation-0 {
  0% {
    width: 0%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  90% {
    width: 100%;
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }

  100% {
    width: 100%;
    -webkit-transform: translateX(100%);
    -ms-transform: translateX(100%);
    transform: translateX(100%);
  }
}

.circuit-55 {
  width: 100%;
  height: auto;
  position: relative;
}

.circuit-33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
  position: relative;
  width: 100%;
  height: auto;
}

.circuit-9 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(0%,0,0);
  -ms-transform: translate3d(0%,0,0);
  transform: translate3d(0%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: 0;
}

.circuit-7 {
  box-shadow: 0 0 1px rgba(0,0,0,0.05);
  overflow: hidden;
  will-change: width;
}

.circuit-5 {
  width: 100%;
}

.circuit-3 {
  display: block;
  position: relative;
  overflow: hidden;
  height: auto;
  width: 100%;
  height: 0;
  width: 100%;
  padding-top: 56%;
  background: #FAFBFC;
}

.circuit-0 {
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  max-height: none;
  object-fit: cover;
  z-index: 2;
}

.circuit-0 img {
  object-fit: cover;
}

.circuit-20 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(-100%,0,0);
  -ms-transform: translate3d(-100%,0,0);
  transform: translate3d(-100%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: -1;
}

.circuit-31 {
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-transform: translate3d(-200%,0,0);
  -ms-transform: translate3d(-200%,0,0);
  transform: translate3d(-200%,0,0);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: relative;
  z-index: -2;
}

.circuit-53 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 16px;
}

.circuit-36 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 16px;
  line-height: 24px;
  font-weight: 700;
  margin-bottom: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 48px;
}

@media (min-width:480px) {
  .circuit-36 {
    font-size: 16px;
    line-height: 24px;
  }
}

@media (max-width:479px) {
  .circuit-36 {
    font-size: 13px;
    line-height: 20px;
  }
}

@media (max-width:479px) {
  .circuit-36 {
    margin-right: 12px;
  }
}

.circuit-41 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.circuit-38 {
  background-color: #F5F5F5;
  border-radius: 999999px;
  position: relative;
  width: 100%;
  overflow: hidden;
  height: 4px;
}

.circuit-38::after {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  background-color: #3063E9;
  -webkit-transition: width 0.05s ease-out;
  transition: width 0.05s ease-out;
  height: 100%;
  width: 1px;
}

.circuit-38::after {
  background-color: #000000;
}

.circuit-38::after {
  border-radius: 999999px;
  -webkit-animation-name: animation-0;
  animation-name: animation-0;
  -webkit-animation-duration: 5640ms;
  animation-duration: 5640ms;
  -webkit-animation-play-state: running;
  animation-play-state: running;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

.circuit-39 {
  font-size: 13px;
  line-height: 20px;
  margin-left: 8px;
}

.circuit-51 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: 48px;
}

@media (max-width:479px) {
  .circuit-51 {
    margin-left: 12px;
  }
}

.circuit-44 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  -webkit-transition: opacity 120ms ease-in-out, color 120ms ease-in-out, background-color 120ms ease-in-out, border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out, color 120ms ease-in-out, background-color 120ms ease-in-out, border-color 120ms ease-in-out;
  background-color: #FFF;
  border-color: #999999;
  color: #1A1A1A;
  padding: 8px calc(24px - 1px);
  border-radius: 8px;
  padding: 8px;
  margin-left: 8px;
}

.circuit-44:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-44:focus::-moz-focus-inner {
  border: 0;
}

.circuit-44:disabled,
.circuit-44[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-44:hover {
  background-color: #FAFBFC;
  border-color: #333333;
}

.circuit-44:active {
  background-color: #F5F5F5;
  border-color: #1A1A1A;
}

.circuit-44:first-of-type {
  margin-left: 0;
}

.circuit-42 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<div
  aria-label="gallery"
  class="circuit-55 circuit-56"
>
  <div
    class="circuit-33 circuit-34"
  >
    <div
      class="circuit-9 circuit-10"
      width="100%"
    >
      <div
        class="circuit-7 circuit-8"
      >
        <div
          class="circuit-5 circuit-6"
          width="100%"
        >
          <div
            class="circuit-2 circuit-3 circuit-4"
          >
            <img
              alt="Aerial photo of turbulent blue ocean waves"
              class="circuit-0 circuit-1"
              src="https://source.unsplash.com/QU-zhliIV8Q/1600x900"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="circuit-20 circuit-10"
      width="100%"
    >
      <div
        class="circuit-7 circuit-8"
      >
        <div
          class="circuit-5 circuit-6"
          width="100%"
        >
          <div
            class="circuit-2 circuit-3 circuit-4"
          >
            <img
              alt="Aerial photo of turbulent turquoise ocean waves"
              class="circuit-0 circuit-1"
              src="https://source.unsplash.com/TpHmEoVSmfQ/1600x900"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="circuit-31 circuit-10"
      width="100%"
    >
      <div
        class="circuit-7 circuit-8"
      >
        <div
          class="circuit-5 circuit-6"
          width="100%"
        >
          <div
            class="circuit-2 circuit-3 circuit-4"
          >
            <img
              alt="Aerial photo of turbulent ocean water with white foam"
              class="circuit-0 circuit-1"
              src="https://source.unsplash.com/-lpbnspYkJg/1600x900"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="circuit-53 circuit-54"
  >
    <p
      class="circuit-35 circuit-36 circuit-37"
    >
      1
       / 
      3
    </p>
    <div
      class="circuit-40 circuit-41"
    >
      <span
        aria-labelledby="progress-bar_2"
        class="circuit-38"
        loop=""
      />
      <span
        class="circuit-39"
        id="progress-bar_2"
      />
    </div>
    <div
      class="circuit-51 circuit-52"
    >
      <button
        aria-label="pause"
        class="circuit-43 circuit-44"
        title="Pause"
      >
        <svg
          fill="none"
          height="16"
          role="presentation"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.5 3v10M11.5 3v10"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
          />
        </svg>
        <span
          class="circuit-42"
        >
          Pause
        </span>
      </button>
      <button
        aria-label="previous"
        class="circuit-43 circuit-44"
        title="Previous"
      >
        <svg
          fill="none"
          height="16"
          role="presentation"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 4L6 8l4 4"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        <span
          class="circuit-42"
        >
          Previous
        </span>
      </button>
      <button
        aria-label="next"
        class="circuit-43 circuit-44"
        title="Next"
      >
        <svg
          fill="none"
          height="16"
          role="presentation"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 12l4-4-4-4"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        <span
          class="circuit-42"
        >
          Next
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Carousel styles should render without controls 1`] = `null`;
